--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "musix",
+	"name": "test",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -28,7 +28,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
+		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
