--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/d3-scale": "^4.0.8",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
@@ -40,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"d3-scale": "^4.0.2",
 		"dayjs": "^1.11.11"
 	}
 }
