--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "test",
+	"name": "my-app",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -19,29 +19,26 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/d3-scale": "^4.0.8",
-		"@types/eslint": "^8.56.7",
-		"autoprefixer": "^10.4.19",
-		"daisyui": "^4.12.10",
+		"@types/eslint": "^9.6.0",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
-		"tslib": "^2.4.1",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"vitest": "^2.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"d3-scale": "^4.0.2",
-		"dayjs": "^1.11.11"
+		"daisyui": "^4.12.11",
+		"dayjs": "^1.11.13"
 	}
 }
