--- a/package.json
+++ b/package.json
@@ -17,13 +17,22 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@playwright/test": "^1.45.3",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-svelte-csf": "^5.0.0-next.11",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/svelte": "^8.4.2",
+    "@storybook/sveltekit": "^8.4.2",
+    "@storybook/test": "^8.4.2",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/eslint": "^9.6.0",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
@@ -31,21 +40,13 @@
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "storybook": "^8.4.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3",
-    "vitest": "^2.0.4",
-    "storybook": "^8.4.2",
-    "@storybook/svelte": "^8.4.2",
-    "@storybook/sveltekit": "^8.4.2",
-    "@storybook/blocks": "^8.4.2",
-    "@storybook/addon-svelte-csf": "^5.0.0-next.11",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/test": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2"
+    "vitest": "^2.0.4"
   }
 }
