--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
+    "format": "prettier --write src/",
     "lint": "prettier --check src/ && eslint src/",
     "test:unit": "vitest",
     "test": "npm run test:unit -- --run && npm run test:e2e",
